--- a/CodeDeckAPI/appsettings.json
+++ b/CodeDeckAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CodeCardConnection": "Server=DESKTOP-BV3IJ8C;Initial Catalog=CodeCardDB;User ID=CodeCardAPI;Password:123456789;"
+  }
 }
