first Migration of Database made successfully and added sql repo to mapping and commented out mock

--- a/CodeDeckAPI/appsettings.json
+++ b/CodeDeckAPI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CodeCardConnection": "Server=DESKTOP-BV3IJ8C;Initial Catalog=CodeCardDB;User ID=CodeCardAPI;Password:123456789;"
+    "CodeDeckConnection": "Server=DESKTOP-BV3IJ8C;Initial Catalog=CodeDeckDB;User ID=CodeDeckAPI;Password=123456789;"
   }
 }
