--- a/CodeDeckAPI/appsettings.json
+++ b/CodeDeckAPI/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CodeDeckConnection": "Server=DESKTOP-BV3IJ8C;Initial Catalog=CodeDeckDB;User ID=CodeDeckAPI;Password=123456789;"
+  },
+  "AppSettings": {
+    "Token": "my top secret key"
   }
 }
