--- a/src/CodeDeckAPI/appsettings.json
+++ b/src/CodeDeckAPI/appsettings.json
@@ -8,9 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CodeDeckConnection": "Server=DESKTOP-BV3IJ8C;Initial Catalog=CodeDeckDB;User ID=CodeDeckAPI;Password=123456789;"
-  },
-  "AppSettings": {
-    "Token": "my top secret key"
+    "CodeDeckConnection": "Server=DESKTOP-BV3IJ8C;Initial Catalog=CodeDeckDB;"
   }
 }
