update db server

--- a/src/CodeDeckAPI/appsettings.json
+++ b/src/CodeDeckAPI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CodeDeckConnection": "Server=DESKTOP-BV3IJ8C;Initial Catalog=CodeDeckDB;"
+    "CodeDeckConnection": "Server=localhost,1433;Initial Catalog=CodeDeckDB;"
   }
 }
