--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
   inputs:
     command: publish
     publishWebProjects: false
-    projects: 'src/CommandAPI/*.csproj'
+    projects: 'src/CodeDeckAPI/*.csproj'
     arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
 
 - task: PublishBuildArtifacts@1
