--- a/src/CodeDeckAPI/appsettings.Development.json
+++ b/src/CodeDeckAPI/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "CodeDeckConnection": "Server=localhost,1433;Initial Catalog=CodeDeckDB;"
   }
 }
