--- a/src/CodeDeckAPI/appsettings.json
+++ b/src/CodeDeckAPI/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "CodeDeckConnection": "Server=localhost,1433;Initial Catalog=CodeDeckDB;"
-  }
+  "AllowedHosts": "*"
 }
